# raytracer

./: CMakeLists.txt  README.md  update.sh
src/: AGL.h  AGLM.cpp  AGLM.h  basic.cpp  box.h  camera.h  gradient.cpp  hittable.h  hittable_list.h  intesection_tests.cpp  main.cpp  material.h  materials.cpp  normals.cpp  plane.h  ppm_image.cpp  ppm_image.h  ray.h  raytracer.cpp  silhouette.cpp  sphere.h  triangle.h  unique_image.cpp
